<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BaseContentBack">

    <!-- 타이틀 -->
    <RelativeLayout
        android:id="@+id/rl_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_100"
        android:background="@color/BaseContentBack">
        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/px_20"
            android:paddingRight="@dimen/px_20">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/lc_demo_nav_back">
            </ImageView>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pwreset_title"
            android:textColor="@color/lc_demo_color_2c2c2c"
            android:textSize="@dimen/px_36"
            android:textStyle="bold"></TextView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_header_layout">
        <LinearLayout
            android:id="@+id/user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="21.5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                style="@style/BaseEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_rounded"
                android:hint="@string/pwreset_input_email_hint"
                android:inputType="text"
                android:paddingLeft="21sp">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_phone"
                    style="@style/BaseEdit"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="8"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="21sp"
                    android:background="@drawable/edittext_rounded"
                    android:hint="@string/pwreset_input_phone_hint"
                    android:inputType="phone"
                    android:maxLength="11">
                </EditText>
                <TextView
                    android:id="@+id/tv_auth_btn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="2dp"
                    android:gravity="center"
                    android:background="@color/BaseWhite"
                    android:textColor="@color/BaseTitleText"
                    android:text="@string/btn_auth">
                </TextView>
            </LinearLayout>
            <EditText
                android:id="@+id/et_phone_auth"
                style="@style/BaseEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="21sp"
                android:background="@drawable/edittext_rounded"
                android:hint="@string/pwreset_input_phone_auth_hint"
                android:inputType="phone"
                android:maxLength="6">
            </EditText>

            <!-- 비밀번호 찾기 버튼 -->
            <LinearLayout
                android:id="@+id/ll_find_pw"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/user_module_bg_commit_button_press"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_passwd_reset"
                    android:textColor="@color/c43"
                    android:textSize="12dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pass_find_msg1"
                    style="@style/BaseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80sp"
                    android:text="@string/pwreset_info_title"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/with_linear5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18.8sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/artboard_56"/>

                    <TextView
                        android:id="@+id/pass_find_msg_sub1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/pwreset_info_hint1" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/artboard_56" />
                    <TextView
                        android:id="@+id/pass_find_msg_sub4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/pwreset_info_hint2" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>